--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>MI RED SOCIAL</title>
-  </head>
-  <body>
-
-  </body>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>FOODMAP</title>
+<link rel="stylesheet" href="views/css/materialize.min.css">
+<link rel="stylesheet" href="views/css/main.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="http://designers.hubspot.com/hs-fs/hub/327485/file-2054199286-css/font-awesome.css" rel="stylesheet">
+<script src="views/js/jquery.js"></script>
+<script src="views/js/jquery.dataTables.min.js"></script>
+</head>
+<body>
+  <div class="container" class="responsive-img">
+  <div class="row">
+    <div class="col s12">
+     <div id="setTimeout" class="setTimeout">
+      <img class="responsive-img" src="./views/assets/img/foodieblack.jpg" alt="Foddie">
+     </div>
+  </div>
+  </div>
+  </div>
+<script src="views/js/vistasplash.js"></script>
+</body>
 </html>
