eventos listo y corregido

--- a/eventos.html
+++ b/eventos.html
@@ -156,7 +156,7 @@
           <div class="col s12 l12">
             <div class="card">
               <div class="card-image">
-                <img src="assets/images/CafeResp.png" alt="logo Expo cafe y gourmet 2018">
+                <img src="assets/images/expocafe.png" alt="logo Expo cafe y gourmet 2018">
                 <span class="card title"> Expo Café México: la feria </span>
               </div>
               <div class="card-content">
