subiendo vista splash y formulario de inicio de sesion

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-  <div class="container" class="responsive-img">
-  <div class="row">
-    <div class="col s12">
-     <div id="setTimeout" class="setTimeout">
-      <img class="responsive-img" src="./views/assets/img/foodieblack.jpg" alt="Foddie">
-     </div>
+    <div class="container" class="responsive-img">
+    <div class="row">
+      <div class="col s12">
+       <div id="setTimeout" class="setTimeout">
+       </div>
+    </div>
   </div>
-  </div>
-  </div>
+    </div>
   <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
+    <script src="js/welcome.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 </html>
